fix copilot issues
